--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <script defer src="http://localhost:8000/socket.io/socket.io.js"></script>
     <script defer src="js/client.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <img class="logo" src="logo.png" alt="">
+       <h1 class="logo">Chat App</h1>
     </nav>
     <div class="container">
     
