--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav>
-       <h1 class="logo">Chat App</h1>
+       <h1 class="logo">RETRO CHAT APP</h1>
     </nav>
     <div class="container">
     
